# rust-workspace

./: .env  .gitignore  Cargo.toml  readme.md
01_start/: Cargo.toml
01_start/tests/: cli.rs
02_echor/: Cargo.toml
02_echor/src/: main.rs
02_echor/tests/: cli.rs
03_catr/: Cargo.toml
03_catr/src/: lib.rs  main.rs
03_catr/tests/: cli.rs
04_headr/: Cargo.toml  mk-outs.sh
04_headr/src/: lib.rs
04_headr/tests/: cli.rs
05_wcr/: Cargo.toml  mk-outs.sh
05_wcr/src/: lib.rs
05_wcr/tests/: cli.rs
06_uniqr/: Cargo.toml  mk-outs.sh
06_uniqr/src/: lib.rs
07_findr/: Cargo.toml  mk-outs.sh
07_findr/src/: lib.rs
08_cutr/: Cargo.toml
11_tailr/: Cargo.toml
11_tailr/src/: lib.rs
db/: Cargo.toml  db.sql
db/src/: main.rs
http/: Cargo.toml
http/src/: httprequest.rs  httpresponse.rs
httpserver/: Cargo.toml
httpserver/public/: 404.html  health.html  index.html
httpserver/src/: handler.rs  router.rs  server.rs
tcpclient/src/: main.rs
tcpserver/src/: main.rs
trpl/src/: main.rs
wasm-client/: Cargo.toml
wasm-client/src/: errors.rs  lib.rs
wasm-client/www/: index.html
wasm-game-of-life/: Cargo.toml  README.md
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/www/: index.js
webapp/: Cargo.toml
webapp/src/: errors.rs  handlers.rs  routers.rs
webservice/: Cargo.toml
webservice/src/: db_access.rs  errors.rs  handlers.rs  main.rs  models.rs  routers.rs  state.rs
webservice/src/db_access/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
(+6 files in other folders)
