[workspace]

members = [
    "01_start",
    "02_echor",
    "03_catr",
    "04_headr",
    "05_wcr",
    "06_uniqr",
    "07_findr",
    "08_cutr",
    "09_grepr",
    "10_commr",
    "11_tailr",
    "12_fortuner",
    "13_calr",
    "14_lsr",
    "tcpserver",
    "tcpclient",
    "httpserver",
    "http",
    "webservice",
    "db",
    "webapp"
]
