[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.144", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.3.0"

[[bin]]
name = "server1"

[[bin]]
name = "teacher-service"